<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SampleQuestion" />

    <RadioGroup
                android:id="@+id/rgAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
        
      <RadioButton
        android:id="@+id/rdans1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans1" />

    <RadioButton
        android:id="@+id/rdans2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans2" />

    <RadioButton
        android:id="@+id/rdans3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans3" />

    <RadioButton
        android:id="@+id/rdans4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans4" />

    <RadioButton
        android:id="@+id/rdans5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans5" />

    <RadioButton
        android:id="@+id/rdans6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans6" />
    </RadioGroup>

    <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
     <Button
	        android:id="@+id/btnSaveQuestion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Save" />
	
	    <Button
	        android:id="@+id/btnPrevQuestion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Previous Question" />
	    <Button
	        android:id="@+id/btnNextQuestion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Next Question" />
	
	    <Button
	        android:id="@+id/btnPrevQuestion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Previous Question" />
    </LinearLayout>

</LinearLayout>
